2005-06-09  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/environment/Sun.cpp
		* use spotlight since the offset mapping doesn't work with directional lights
	*  src/components/ogre/environment/Foliage.cpp
		* use "tussock" instead of "field"


2005-06-09  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/ModelDefinitionManager.cpp:
		* update the hackish area definitions

2005-06-09  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/server/ServerService.cpp:
		* changed errno to errorno since it appears to mess with some kind of macro on some systems

2005-06-09  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberPhysicalEntity.cpp:
		* bugfix for usescale=none

2005-06-09  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberSceneManager/include/OgreTerrainSceneManager.h, src/components/ogre/EmberSceneManager/src/OgreOctreeSceneManagerDll.cpp, src/components/ogre/EmberSceneManager/src/OgreTerrainRenderable.cpp, src/components/ogre/EmberSceneManager/src/OgreTerrainSceneManager.cpp
		* sync with Ogre 1.0.2

2005-06-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/ChatWidget.xml, src/components/ogre/widgets/ConsoleWidget.xml, src/components/ogre/widgets/InspectWidget.xml,src/components/ogre/widgets/Performance.widget
		* use absolute position 

2005-06-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/MakeEntityWidget.*
		* added /createentity console command

2005-06-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/JesusEdit.*
		* don't render if not shown

2005-06-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/InspectWidget.cpp:
		* added missing include

2005-06-07  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Help.*
		* propogate the runCommand(...) call upwards

2005-06-07  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainGenerator.cpp: